--- a/Pruebas/Primeros pasos.html/index.html
+++ b/Pruebas/Primeros pasos.html/index.html
@@ -2,8 +2,64 @@
 <html>
 <head>
     <title>Mi primera web</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
-<body>    
+<body> 
+    <table style="width: 500px;">
+        <thead>
+            <tr>
+                <th>Producto</th>
+                <th>Precio</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Holapeter</td>
+                <th>Gratis</th>
+            </tr>
+            <tr>
+                <td>Hola   </td>
+                <th>20$</th>
+            </tr>
+            <tr>
+                <td>chancho feliz muy feliz</td>
+                <th>200$</th>
+            </tr>
+        </tbody>
+        <tfoot>
+            <td></td>
+            <th>Total: 220$</th>
+        </tfoot>
+    </table>
+    <!--ul es lista no ordenada-->   
+    <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>
+    </ul>
+    <!--ol es lista ordenada-->  
+    <ol>
+        <li value="50">Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>
+        <li>
+            <ol>
+                <li style="list-style-type: lower-roman;">subelemento1</li>
+                <li style="list-style-type: lower-roman;">subelemento2</li>
+                <li style="list-style-type: lower-roman;">subelemento3</li>
+            </ol>
+        </li>
+    </ol>
+
+
+
+
     <form action="/formulario" method="post">
         <label for="nombre">Nombre</label>
         <input value="cahncho" type="text" id="nombre" name="nombre" placeholder="Nombre" />
