--- a/JavaScript/Entrega y enunciados - Ejercicios de introducción I/Estructuras_De_Control/ejercicio1.html
+++ b/JavaScript/Entrega y enunciados - Ejercicios de introducción I/Estructuras_De_Control/ejercicio1.html
@@ -19,12 +19,15 @@ valores numéricos por pantalla-->
         var numero2 = prompt("Dime otro número");
         if (isNaN(numero || numero2))
         {
-        alert("El valor no es numérico");
-        alert("True")
+            alert("El valor no es numérico");
+            alert("True")
         }
-        var doble = parseInt(numero) + parseInt(numero2);
-        alert("La suma es " + doble);
-        alert("False")
+        else
+        {
+            var doble = parseInt(numero) + parseInt(numero2);
+            alert("La suma es " + doble);
+            alert("False")
+        }
     </script>
 </body>
 </html>
