algunas cosas avanzadas, aun queda mucho

--- a/JavaScript/form3_js.html
+++ b/JavaScript/form3_js.html
@@ -10,7 +10,7 @@
         }     
         input:invalid
         {
-            background-color: red;
+            background-color: rgb(199, 70, 70);
         }   
     </style>
 </head>
