boton de register y login añadido, aun falta pero se va avanzando

--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/consejos.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/consejos.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consejos de la Comunidad</title>
+    <link rel="icon" type="image/x-icon" href="icono.png">
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
     <header class="header">
         <div class="container">
+            <div class="register"><a href="register.html">Registrate/Inicia Sesion</a></div>
             <h1>Consejos de la Comunidad</h1>
             <nav class="navigation">
                 <ul>
@@ -23,10 +25,14 @@
         <div class="search-bar">
             <form action="#" method="GET">
                 <input type="text" id="search" name="search" placeholder="Buscar consejos..." required>
-                <button type="submit">Buscar</button>
+                <button type="button">Buscar</button>             
             </form>
         </div>
-    </div>
+        <div>
+            <button type=>Filtrar por categoria</button>
+            <button type=>Filtrar por valoracion</button>
+            <button type=>Filtrar por efectividad</button>   
+        </div>
     </header>
 
     <main class="main-content">
