--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Educativo de Ciberseguridad</title>
+    <link rel="icon" type="image/x-icon" href="icono.png">
     <link rel="stylesheet" href="CSS/styles.css">
+    <script src="JS/inicio.js"></script>
 </head>
 
 <body>
     <header class="header">
         <div class="container">
+            <div class="register"><a href="register.html">Registrate/Inicia Sesion</a></div>
             <h1>Blog Educativo de Ciberseguridad</h1>
             <nav class="navigation">
                 <ul>
