--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/categorias.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/categorias.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categorías</title>
+    <link rel="icon" type="image/x-icon" href="icono.png">
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
@@ -11,7 +12,8 @@
     
     <header class="header">
         <div class="container">
-            <h1>Encuentra tu nicho</h1>
+            <div class="register"><a href="register.html">Registrate/Inicia Sesion</a></div>
+            <h1>Encuentra tu especialidad</h1>
             <nav class="navigation">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
