--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
@@ -7,7 +7,7 @@
     <title>Blog Educativo de Ciberseguridad</title>
     <link rel="icon" type="image/x-icon" href="icono.png">
     <link rel="stylesheet" href="CSS/styles.css">
-
+    <script src="JS/inicio.js"></script>
 </head>
 
 <body>
@@ -58,14 +58,14 @@
             <div class="container">
                 <h2>Consejos de la Comunidad</h2>
                 <article class="tutorial">
-                    <h3>Cómo evitar vulnerabilidades</h3>
+                    <!--<h3>Cómo evitar vulnerabilidades</h3>
                     <p>Un consejo rapido para evitar brechas de seguridad en tu equipo.</p>
                     <a href="consejos.html">Leer más</a>
                 </article>
                 <article class="tutorial">
                     <h3>Gestiona tus contraseñas de forma segura</h3>
                     <p>Consejos para mantener tus cuentas protegidas.</p>
-                    <a href="consejos.html">Leer más</a>
+                    <a href="consejos.html">Leer más</a>-->
                 </article>
             </div>
         </section>
@@ -78,7 +78,7 @@
             </div>
         </section>
     </main>
-    
+
     <footer class="footer">
         <div class="container">
             <p>© 2024 Blog Educativo de Ciberseguridad. Todos los derechos reservados.</p>
@@ -86,7 +86,6 @@
             <p></p>
         </div>
     </footer>
-    <script src="JS/inicio.js"></script>
 </body>
 
 </html>
