--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/consejos.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/consejos.html
@@ -29,9 +29,39 @@
             </form>
         </div>
         <div>
-            <button type=>Filtrar por categoria</button>
-            <button type=>Filtrar por valoracion</button>
-            <button type=>Filtrar por efectividad</button>   
+            <select name="categoria" id="categoria">
+                <option value="filtro">Filtrar por categoria</option>
+                <option value="Malware">Malware</option>
+                <option value="Phishing">Phishing</option>
+                <option value="Hacking etico">Hacking etico</option>
+                <option value="Otros">Otros</option>
+            </select>
+            <select name="valoracion" id="valoracion">
+                <option value="filtro">Filtrar por Valoracion</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+            <select name="efectividad" id="efectividad">
+                <option value="filtro">Filtrar por Efectividad</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select> 
         </div>
     </header>
 
