--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/register.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/register.html
@@ -18,10 +18,10 @@
             </nav>
         </div>
     </header>
-    <form name="form3" id="form3" action="pagina.php" method="post">
+    <form name="form" id="form" action="pagina.php" method="post">
         <label>
             Nombre de Usuario: 
-            <input type="text" name="login" id="login" required>
+            <input type="text" name="user" id="user" required>
         </label>
         <label>
             E-mail:
@@ -29,7 +29,7 @@
         </label>
         <label>
             Contraseña:
-            <input type="password" name="password" pattern="[A-Za-z0-9]{8}[A-Za-z0-9]*" id="password" required>
+            <input type="password" name="password" required="[A-Za-z0-9]{8}[A-Za-z0-9]" id="password" required>
         </label>
         <label>
             Repetir contraseña :
