--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 
+
+<!--Página de inicio:
+        -Listado de recetas definido como array de objetos JavaScript: 1 punto
+        -Botón para ocultar/mostrar opciones de filtrado (junto con dichas opciones): 1 punto
+        -Botón para filtrar por texto + dificultad + tiempo: 1 punto
+        -Carga de recetas ordenadas por título y reseteo de opciones de filtrado: 1 punto
+    -Formulario de alta de receta:
+        -Mensajes personalizados en campos indicados: 1,5 puntos
+        -Validación conjunta JavaScript + HTML5: 1 punto
+        -Estilos CSS para campos inválidos: 0,5 puntos
+        -Evento para marcar en rojo el título si no está relleno: 0,5 puntos
+    -Otras acciones (página detalle.html):
+        -Evento para mostrar datos de la receta al pasar el ratón sobre la imagen: 1 punto
+        -Evento para eliminar un ingrediente de la lista al hacer doble clic: 1 punto
+        -Limpieza y claridad de los contenidos y estructura, tanto a nivel HTML como CSS: 0,5 puntos
+-->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
