casi acabado, solo faltan los filtros

--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/consejos.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/consejos.html
@@ -24,11 +24,12 @@
         </div>
         <div class="search-bar">
             <form action="#" method="GET">
-                <input type="text" id="search" name="search" placeholder="Buscar consejos..." required>
+                <input type="text" id="search" name="search" placeholder="Buscar consejos...">
                 <button type="button">Buscar</button>             
             </form>
         </div>
         <div>
+            <!--Falta la funcionalidad de los filtros-->
             <select name="categoria" id="categoria">
                 <option value="filtro">Filtrar por categoria</option>
                 <option value="Malware">Malware</option>
@@ -72,7 +73,7 @@
                 <p>Encuentra consejos útiles y añade los tuyos para ayudar a otros usuarios.</p>
             </div>
         </section>
-
+            <!--Falta hacer que los consejos de distingan correctamente (en cajas) y que se añadan automaticamente los consejos que se vayan añadiendo-->
         <section id="popular-consejos" class="popular-tips">
             <div class="container">
                 <h2>Consejos Populares</h2>
