--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
@@ -3,19 +3,19 @@
 
 
 <!--Página de inicio:
-        -Listado de recetas definido como array de objetos JavaScript: 1 punto
-        -Botón para ocultar/mostrar opciones de filtrado (junto con dichas opciones): 1 punto
-        -Botón para filtrar por texto + dificultad + tiempo: 1 punto
-        -Carga de recetas ordenadas por título y reseteo de opciones de filtrado: 1 punto
+        -Listado de recetas definido como array de objetos JavaScript: medio echo (hay un array pequeño solo para mostrar 2 consejos principales, falta el array grande)
+        -Botón para ocultar/mostrar opciones de filtrado (junto con dichas opciones): hecho
+        -Botón para filtrar por texto + dificultad + tiempo: solo botones, falta la funcionalidad (que filtre)
+        -Carga de recetas ordenadas por título y reseteo de opciones de filtrado: sin hacer (falta conseguir que al darle al boton de "añadir" se cree el objeto y se añada al array)
     -Formulario de alta de receta:
-        -Mensajes personalizados en campos indicados: 1,5 puntos
-        -Validación conjunta JavaScript + HTML5: 1 punto
-        -Estilos CSS para campos inválidos: 0,5 puntos
-        -Evento para marcar en rojo el título si no está relleno: 0,5 puntos
+        -Mensajes personalizados en campos indicados: hecho
+        -Validación conjunta JavaScript + HTML5: hecho
+        -Estilos CSS para campos inválidos: hecho
+        -Evento para marcar en rojo el título si no está relleno: hecho
     -Otras acciones (página detalle.html):
-        -Evento para mostrar datos de la receta al pasar el ratón sobre la imagen: 1 punto
-        -Evento para eliminar un ingrediente de la lista al hacer doble clic: 1 punto
-        -Limpieza y claridad de los contenidos y estructura, tanto a nivel HTML como CSS: 0,5 puntos
+        -Evento para mostrar datos de la receta al pasar el ratón sobre la imagen: sin hacer
+        -Evento para eliminar un ingrediente de la lista al hacer doble clic: sin hacer
+        -Limpieza y claridad de los contenidos y estructura, tanto a nivel HTML como CSS: mas o menos
 -->
 
 <head>
@@ -74,16 +74,9 @@
         <section id="tutoriales" class="tutorials">
             <div class="container">
                 <h2>Consejos de la Comunidad</h2>
-                <article class="tutorial">
-                    <!--<h3>Cómo evitar vulnerabilidades</h3>
-                    <p>Un consejo rapido para evitar brechas de seguridad en tu equipo.</p>
-                    <a href="consejos.html">Leer más</a>
-                </article>
-                <article class="tutorial">
-                    <h3>Gestiona tus contraseñas de forma segura</h3>
-                    <p>Consejos para mantener tus cuentas protegidas.</p>
-                    <a href="consejos.html">Leer más</a>-->
-                </article>
+                <div class="consejos">
+                    <!--Contenido en el archivo JavaScript-->
+                </div>
             </div>
         </section>
 
