--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/register.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/register.html
@@ -29,7 +29,7 @@
         </label>
         <label>
             Contraseña:
-            <input type="password" name="password" required="[A-Za-z0-9]{8}[A-Za-z0-9]" id="password" required>
+            <input type="password" name="password" pattern="[A-Za-z0-9]{8}[A-Za-z0-9]" id="password" required>
         </label>
         <label>
             Repetir contraseña :
