algunas notas añadidas y empezando a hacer limpieza de cosas innecesarias

--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/index.html
@@ -3,10 +3,10 @@
 
 
 <!--Página de inicio:
-        -Listado de recetas definido como array de objetos JavaScript: medio echo (hay un array pequeño solo para mostrar 2 consejos principales, falta el array grande)
+        -Listado de recetas definido como array de objetos JavaScript: faltan los consejos de diferente tipo
         -Botón para ocultar/mostrar opciones de filtrado (junto con dichas opciones): hecho
         -Botón para filtrar por texto + dificultad + tiempo: solo botones, falta la funcionalidad (que filtre)
-        -Carga de recetas ordenadas por título y reseteo de opciones de filtrado: sin hacer (falta conseguir que al darle al boton de "añadir" se cree el objeto y se añada al array)
+        -Carga de recetas ordenadas por título y reseteo de opciones de filtrado: sin hacer
     -Formulario de alta de receta:
         -Mensajes personalizados en campos indicados: hecho
         -Validación conjunta JavaScript + HTML5: hecho
@@ -16,6 +16,8 @@
         -Evento para mostrar datos de la receta al pasar el ratón sobre la imagen: sin hacer
         -Evento para eliminar un ingrediente de la lista al hacer doble clic: sin hacer
         -Limpieza y claridad de los contenidos y estructura, tanto a nivel HTML como CSS: mas o menos
+    -Extra:
+        comentar todo el codigo
 -->
 
 <head>
