pagina web acabada y entregada

--- a/JavaScript/Entrega 2 del proyecto web de recetas/Blog Ciberseguridad/Estructura/index.html
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Blog Ciberseguridad/Estructura/index.html
@@ -1,25 +1,6 @@
+<!--Pagina principal-->
 <!DOCTYPE html>
 <html lang="es">
-
-
-<!--Página de inicio:
-        -Listado de recetas definido como array de objetos JavaScript: faltan los consejos de diferente tipo
-        -Botón para ocultar/mostrar opciones de filtrado (junto con dichas opciones): hecho
-        -Botón para filtrar por texto + dificultad + tiempo: solo botones, falta la funcionalidad (que filtre)
-        -Carga de recetas ordenadas por título y reseteo de opciones de filtrado: sin hacer
-    -Formulario de alta de receta:
-        -Mensajes personalizados en campos indicados: hecho
-        -Validación conjunta JavaScript + HTML5: hecho
-        -Estilos CSS para campos inválidos: hecho
-        -Evento para marcar en rojo el título si no está relleno: hecho
-    -Otras acciones (página detalle.html):
-        -Evento para mostrar datos de la receta al pasar el ratón sobre la imagen: sin hacer
-        -Evento para eliminar un ingrediente de la lista al hacer doble clic: sin hacer
-        -Limpieza y claridad de los contenidos y estructura, tanto a nivel HTML como CSS: mas o menos
-    -Extra:
-        comentar todo el codigo
--->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,6 +17,7 @@
             <h1>Blog Educativo de Ciberseguridad</h1>
             <nav class="navigation">
                 <ul>
+                    <!--Navegacion entre secciones-->
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="categorias.html">Categorías</a></li>
                     <li><a href="consejos.html">Consejos</a></li>
@@ -93,7 +75,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>© 2024 Blog Educativo de Ciberseguridad. Todos los derechos reservados.</p>
+            <p>© 2025 Blog Educativo de Ciberseguridad. Todos los derechos reservados.</p>
             <p>Contacto: victoraracil55@gmail.com -- 666828002</p>
             <p></p>
         </div>
